--- a/ApplePicker2022/Assembly-CSharp.csproj
+++ b/ApplePicker2022/Assembly-CSharp.csproj
@@ -58,8 +58,10 @@
   <ItemGroup>
     <Compile Include="Assets\AppleTree.cs" />
     <Compile Include="Assets\Apple.cs" />
-    <Compile Include="Assets\ApplePicker.cs" />
     <Compile Include="Assets\Basket.cs" />
+    <Compile Include="Assets\ApplePicker.cs" />
+    <Compile Include="Assets\ScoreCounter.cs" />
+    <Compile Include="Assets\HighScore.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
